# ITK-snap-builder

./: CMakeLists.txt  README.md  clone-and-patch.bat  clone-and-patch.sh  glibc-signal.patch  tinyxml-include.patch
